<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.SettingFragment">

    <TextView
        android:id="@+id/tv_goals"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_left_row"
        android:drawablePadding="5dp"
        android:text="@string/tv_golas"
        android:textColor="@color/colorBlack"
        android:textSize="14sp"
        android:textStyle="bold"
        android:padding="10dp"
        android:drawableLeft="@drawable/ic_left_row" />


    <LinearLayout
        android:id="@+id/ll_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/tv_goals"
        android:layout_margin="10dp"
        android:baselineAligned="false">


        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:background="@drawable/imagebackground">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_info"
                android:layout_gravity="center"
                android:textSize="12sp"
                android:textColor="@color/colorwhite"/>
            <ImageView
                android:id="@+id/img_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/img_todo"
                android:src="@drawable/ic_info"
                android:layout_gravity="center"
                app:layout_constraintDimensionRatio="H,16:9"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/imagebackground"
            android:layout_marginLeft="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/know_you_better"
                android:layout_gravity="center"
                android:textSize="12sp"
                android:textColor="@color/colorwhite"/>
            <ImageView
                android:id="@+id/img_better"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/img_todo"
                android:src="@drawable/ic_knowledge"
                android:layout_gravity="center"
                app:layout_constraintDimensionRatio="H,16:9"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/imagebackground">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TV_risk"
                android:textSize="12sp"
                android:layout_gravity="center"
                android:textColor="@color/colorwhite"/>
            <ImageView
                android:id="@+id/img_risk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/img_todo"
                android:src="@drawable/ic_risk"
                app:layout_constraintDimensionRatio="H,16:9" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:background="@drawable/imagebackground">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TV_family"
                android:layout_gravity="center"
                android:textSize="12sp"
                android:textColor="@color/colorwhite"/>
            <ImageView
                android:id="@+id/img_family"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/img_todo"
                android:src="@drawable/ic_family"
                android:layout_gravity="center"
                app:layout_constraintDimensionRatio="H,16:9"/>
        </LinearLayout>

    </LinearLayout>


    <ImageView
        android:id="@+id/img_back"
        android:layout_width="61dp"
        android:layout_height="34dp"
        android:layout_marginTop="350dp"
        android:background="@drawable/addmore"
        android:src="@drawable/ic_arrow_back"
        android:contentDescription="@string/img_todo" />

    <ImageView
        android:id="@+id/img_forword"
        android:layout_width="61dp"
        android:layout_height="34dp"
        android:layout_marginTop="350dp"
        android:layout_alignParentEnd="true"
        android:background="@drawable/addmore"
        android:src="@drawable/ic_arrow_forward"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/img_todo" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toStartOf="@+id/img_forword"
        android:background="#fff"
        android:layout_toEndOf="@+id/img_back"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/ll_layout"
        android:layout_toLeftOf="@+id/img_forword"
        android:layout_toRightOf="@+id/img_back">


        <EditText
            android:id="@+id/ET_investment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginTop="10dp"
            android:hint="@string/Et_investment"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColorHint="@color/colorBlack"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/TV_recurring"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ET_investment"
            android:layout_margin="8dp"
            android:layout_marginTop="15dp"
            android:padding="5dp"
            android:text="@string/TV_recurring"
            android:textColor="@color/colorBlack"
            android:textSize="14sp" />

        <Switch
            android:id="@+id/Sw_fixed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/TV_recurring"
            android:layout_margin="8dp"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:switchPadding="20dp"
            android:text="@string/fixed"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/TV_variable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/TV_recurring"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/Sw_fixed"
            android:layout_toRightOf="@+id/Sw_fixed"
            android:padding="5dp"
            android:text="@string/variable"
            android:textColor="@color/colorBlack"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/ET_datepurchase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/TV_variable"
            android:layout_margin="8dp"
            android:layout_marginTop="15dp"
            android:hint="@string/date_of_Purchase"
            android:importantForAutofill="no"
            android:textColorHint="@color/colorBlack"
            android:textSize="12sp"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/ET_units"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ET_datepurchase"
            android:layout_margin="8dp"
            android:layout_marginTop="15dp"
            android:hint="@string/number_of_units"
            android:importantForAutofill="no"
            android:textColorHint="@color/colorBlack"
            android:textSize="12sp"
            tools:ignore="TextFields" />


        <EditText
            android:id="@+id/ET_purchase_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ET_units"
            android:layout_margin="8dp"
            android:layout_marginTop="15dp"
            android:hint="@string/purchase_price"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textColorHint="@color/colorBlack"
            android:textSize="12sp" />

        <Button
            android:id="@+id/Btn_add"
            android:layout_width="154dp"
            android:layout_height="33dp"
            android:layout_below="@+id/ET_purchase_price"
            android:layout_marginTop="47dp"
            android:background="@drawable/addmore"
            android:text="@string/add_more"
            android:layout_centerInParent="true"
            android:textColor="@color/colorwhite"
            android:textSize="10sp"
            tools:ignore="SmallSp" />


    </RelativeLayout>
    <ImageView
        android:id="@+id/imageButton"
        android:layout_width="20dp"
        android:layout_height="40dp"
        android:background="@color/colorOrange"
        android:contentDescription="@string/img_todo"
        android:src="@drawable/ic_baseline_more"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="300dp"
        android:layout_alignParentRight="true" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="end|bottom"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/img_todo"
        android:src="@drawable/ic_message" />

</RelativeLayout>